docker: make NER endpoint configurable via system property